Feat: Update AI channel logic, update the front end.