@@ -1,7 +1,6 @@
 package com.aiopen.platform.modules.relay;
 
-import com.aiopen.platform.modules.model.entity.Model;
-import com.aiopen.platform.modules.model.service.ModelService;
+import com.aiopen.platform.modules.ability.service.AbilityService;
 import com.aiopen.platform.modules.relay.exception.RelayException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
@@ -9,6 +8,7 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
+import org.springframework.util.StringUtils;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -16,9 +16,12 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.io.IOException;
+import java.util.Arrays;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 /**
  * OpenAI 兼容转发入口(/v1/**)。使用 API Key 鉴权,错误以 OpenAI 格式返回。
@@ -32,7 +35,7 @@ public class RelayController {
 
     private final RelayService relayService;
     private final RelayAuthService relayAuthService;
-    private final ModelService modelService;
+    private final AbilityService abilityService;
 
     @PostMapping("/chat/completions")
     public void chatCompletions(HttpServletRequest request, HttpServletResponse response) throws IOException {
@@ -41,19 +44,27 @@ public class RelayController {
 
     @GetMapping("/models")
     public Map<String, Object> models(HttpServletRequest request) {
-        relayAuthService.authenticate(request.getHeader("Authorization"));
-        List<Map<String, Object>> data = modelService.listEnabled().stream()
-                .map(this::toModelObject)
-                .toList();
+        RelayContext ctx = relayAuthService.authenticate(request.getHeader("Authorization"));
+        List<String> models = abilityService.distinctModels(ctx.getGroup());
+        if (StringUtils.hasText(ctx.getModelLimits())) {
+            Set<String> allowed = Arrays.stream(ctx.getModelLimits().split(","))
+                    .map(String::trim)
+                    .filter(StringUtils::hasText)
+                    .collect(Collectors.toSet());
+            if (!allowed.isEmpty()) {
+                models = models.stream().filter(allowed::contains).collect(Collectors.toList());
+            }
+        }
+        List<Map<String, Object>> data = models.stream().map(this::toModelObject).toList();
         Map<String, Object> resp = new LinkedHashMap<>();
         resp.put("object", "list");
         resp.put("data", data);
         return resp;
     }
 
-    private Map<String, Object> toModelObject(Model model) {
+    private Map<String, Object> toModelObject(String modelName) {
         Map<String, Object> o = new LinkedHashMap<>();
-        o.put("id", model.getModelName());
+        o.put("id", modelName);
         o.put("object", "model");
         o.put("created", 0);
         o.put("owned_by", "ai-open-platform");
